Mahout Change Log

Release 0.8 - unreleased

__MAHOUT-1219: Remove LSHSearcher from SearchQualityTest. It causes it to fail, but the failure is not very meaningful (dfilimon)

__MAHOUT-1217: Nearest neighbor searchers sometimes fail to remove points: fix in FastProjectionSearch's searchFirst (dfilimon)

__MAHOUT-1216: Add locality sensitive hashing and a LocalitySensitiveHash searcher (dfilimon)

__MAHOUT-1181: Adding StreamingKMeans MapReduce classes (dfilimon)

  MAHOUT-1212: Incorrect classify-20newsgroups.sh file description (Julian Ortega via smarthi)
   
  MAHOUT-1209: DRY out maven-compiler-plugin configuration (Stevo Slavic via smarthi) 

  MAHOUT-1207: Fix typos in description in parent pom (Stevo Slavic via smarthi)  

  MAHOUT-1199: Improve javadoc comments of mahout-integration (Angel Martinez Gonzalez via smarthi)  

  MAHOUT-1162: Adding BallKMeans and StreamingKMeans clustering algorithms (dfilimon)

  MAHOUT-1205: ParallelALSFactorizationJob should leverage the distributed cache (ssc)

  MAHOUT-1156: Adding nearest neighbor Searchers (dfilimon)

  MAHOUT-1202: Speed up Vector operations (dfilimon)

  MAHOUT-1155: Make MatrixSlice a Vector (and fix Centroid cloning; MAHOUT-1202) (dfilimon)

  MAHOUT-1189: CosineDistanceMeasure doesn't return 0 for two 0 vectors (dfilimon)

  MAHOUT-1180: Multinomial<T> throws ConcurrentModificationException when iterating and setting probabilities (dfilimon)

  MAHOUT-1192: Speed up Vector Operations (robinanil)

  MAHOUT-1191: Cleanup Vector Benchmarks make it less variable (robinanil)

  MAHOUT-1190: SequentialAccessSparseVector function assignment is very slow and other iterator woes (robinanil)

  MAHOUT-1188: Inconsistent reference to Lucene versions in code and POM (smarthi)

  MAHOUT-1161: Unable to run CJKAnalyzer for conversion of a sequence file to sparse vector due to instantiation
               exception (ssc)

  MAHOUT-1187: Update Commons Lang to Commons Lang3 (smarthi)
